2008-02-11  Mickael Remond  <mremond@process-one.net>

	* src/network/exmpp_session.erl: API improvement: we can send and
	receive packet right after connection. Developper can thus write
	their own authentication.
	* src/client/exmpp_client_register.erl: Added unregister packets
	creation.

	* src/core/exmpp_xml.erl: Improved API: We can now register a user
	even if we have not set the authentication parameters
	* src/examples/echo_client.erl: Minor typo in comment

2008-02-10  Mickael Remond  <mremond@process-one.net>

	* src/core/exmpp_error.erl: Improved exceptions
	* src/core/exmpp_internals.erl: Likewise
	* src/core/exmpp_xml.erl: Likewise
	* src/network/exmpp_session.erl: Likewise

	* src/network/exmpp_session.erl: Fixed exmpp session start in
	debug mode
	
	* src/core/exmpp_xml.erl: Beautify code
	
2008-02-09  Mickael Remond  <mremond@process-one.net>

	* src/network/exmpp_session.erl: We can now open the stream before
	defining authentication method. In this case, we need to pass an
	extra domain parameter.
	* src/core/exmpp_jid.erl: Fixed indentation.
	* src/core/exmpp_stringprep.erl: Fixed indentation.

2008-01-27  Mickael Remond  <mremond@process-one.net>

	* src/network/exmpp_session.erl: Now forward IQ packet to client
	session (Thanks to Will Glozer).

	* src/network/exmpp_session.erl: Support session stop (Thanks to Will
	Glozer).

2008-01-16  Mickael Remond  <mremond@process-one.net>

	* src/network/exmpp_ssl.erl: SSL client connection support (Thanks
	to Wil Glozer)
	* src/Emakefile.in: Likewise
	* src/Makefile.am: Likewise
	* exmpp/src/network/exmpp_session.erl: Likewise
	* exmpp/ebin/Makefile.am: Likewise
	
	* exmpp/configure.ac: Clean-up compilation process (Thanks to Will
	Glozer)
	* exmpp/include/exmpp.hrl: Likewise
	* exmpp/src/Makefile.am: Likewise
	* exmpp/ebin/Makefile.am: Likewise
	* exmpp/ac-aux/depcomp: Likewise
	* exmpp/ac-aux/missing: Likewise
	* exmpp/ac-aux/config.guess: Likewise
	* exmpp/ac-aux/config.sub: Likewise